--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
             <img src="thumbnails/heart.png" alt="Home" class="logo">
         </a>
         <div class="nav-buttons">
-            <a href="portfolio.html"><button>My Projects</button></a>
+            <a href="index.html"><button>My Projects</button></a>
             <a href="aboutme.html"><button>About Me</button></a>
             <a href="contactme.html"><button>Contact</button></a>
         </div>
