--- a/carletonleb.html
+++ b/carletonleb.html
@@ -8,11 +8,11 @@
 </head>
 <header>
     <nav>
-        <a href="portfolio.html" class="logo-link">
+        <a href="index.html" class="logo-link">
             <img src="thumbnails/heart.png" alt="Home" class="logo">
         </a>
         <div class="nav-buttons">
-            <a href="portfolio.html"><button>My Projects</button></a>
+            <a href="index.html"><button>My Projects</button></a>
             <a href="aboutme.html"><button>About Me</button></a>
             <a href="contactme.html"><button>Contact</button></a>
         </div>
@@ -28,7 +28,7 @@
         <br>
         <h10>In my second year of University, a new club was being formed- Carleton Lebanese Student Society (CLSS). 
             I went through an interview process, and fortunately got picked. I was in charge of creating posts and posters, ensuring our events got exposure. 
-            I also made and edited a few Instagram reels, which made me excersize different kinds of creativity!
+            I also made and edited a few Instagram reels, which made me exercise different kinds of creativity!
         </h10>
         <br>
         <h10>Below are some of my posts and reels.</h10>
