--- a/chef.html
+++ b/chef.html
@@ -8,11 +8,11 @@
 </head>
 <header>
     <nav>
-        <a href="portfolio.html" class="logo-link">
+        <a href="index.html" class="logo-link">
             <img src="thumbnails/heart.png" alt="Home" class="logo">
         </a>
         <div class="nav-buttons">
-            <a href="portfolio.html"><button>My Projects</button></a>
+            <a href="index.html"><button>My Projects</button></a>
             <a href="aboutme.html"><button>About Me</button></a>
             <a href="contactme.html"><button>Contact</button></a>
         </div>
