--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <header>
     <nav>
-        <a href="portfolio.html" class="logo-link">
+        <a href="index.html" class="logo-link">
             <img src="thumbnails/heart.png" alt="Home" class="logo">
         </a>
         <div class="nav-buttons">
