--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="grid">
             <a href="adobeCreations.html" class="card-link">
                 <div class="card">
-                    <img src="thumbnails/adobethumb.png" alt="Adobe">
+                    <img src="adobethumb.png" alt="Adobe">
                     <div class="card-content">
                         <h3>Multimedia Design</h3>
                         <p1>Agriculture and Food Museum</p1>
