--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <a href="carletonleb.html" class="card-link">
                 <div class="card">
-                    <img src="thumbnails/clssthumb.png" alt="Lebanese Student Society">
+                    <img src="clssthumb.png" alt="Lebanese Student Society">
                     <div class="card-content">
                         <h3>Social Media Managing</h3>
                         <p1>Carleton Lebanese Student Society</p1>
@@ -59,7 +59,7 @@
             
             <a href="municipal.html" class="card-link">
                 <div class="card">
-                    <img src="thumbnails/websitethumb.png" alt="App">
+                    <img src="websitethumb.png" alt="App">
                     <div class="card-content">
                         <h3>Website Design</h3>
                         <p1>Ottawa's Municipality System</p1>
@@ -69,7 +69,7 @@
 
             <a href="chef.html" class="card-link">
                 <div class="card">
-                    <img src="thumbnails/ricthumb.png" alt="Documentary">
+                    <img src="ricthumb.png" alt="Documentary">
                     <div class="card-content">
                         <h3>Videography</h3>
                         <p1>Chef Ric's</p1>
