--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <header>
     <nav>
         <a href="index.html" class="logo-link">
-            <img src="thumbnails/heart.png" alt="Home" class="logo">
+            <img src="heart.png" alt="Home" class="logo">
         </a>
         <div class="nav-buttons">
             <button onclick="scrollToSection('projects')">My Projects</button>
