--- a/adobeCreations.html
+++ b/adobeCreations.html
@@ -29,7 +29,7 @@
         <h10>This was a project that was worked on all semester long.
             We got to partner up with the Canada Agriculture Food Museum, visit the farm, and pitch our ideas to some of the workers!
             In this MPAD2002 Visual Communications class, the assignments for the museum were split into three, each targeted for a different Adobe software.
-            This class focused heavly on colour theory and shapes, while learning about how to direct your content to a certain demographic.
+            This class focused heavily on colour theory and shapes, while learning about how to direct your content to a certain demographic.
         </h10>
         <br>
         <h10>The three projects were to create a brochure using Adobe InDesign, a poster using Adobe Illustrator, and an app using Adobe XD!
