--- a/municipal.html
+++ b/municipal.html
@@ -9,7 +9,7 @@
 <header>
     <nav>
         <a href="index.html" class="logo-link">
-            <img src="thumbnails/heart.png" alt="Home" class="logo">
+            <img src="heart.png" alt="Home" class="logo">
         </a>
         <div class="nav-buttons">
             <a href="index.html"><button>My Projects</button></a>
