--- a/chef.html
+++ b/chef.html
@@ -27,12 +27,12 @@
         <br>
         <br>
         <h10> I created a short documentary alongside two teammates. We wanted to focus on food insecurity in Ottawa,
-            and we had the opportunity to interview Ric Watson. We recieved an A+ on this assignment, and was asked if it could be shown at an Enrichment Program on the foundations 
+            and we had the opportunity to interview Ric Watson. We received an A+ on this assignment and were asked if it could be shown at an Enrichment Program on the foundations 
             of visual communication. 
         </h10>
         <br>
-        <h10>Chef Ric Watson is the Director of Food Services and The Ottawa Mission, and the owner of his non-profit service "Chef Ric's."
-            We got to learn about his vulnerable childhood, and the story behind his organization.
+        <h10>Chef Ric Watson is the Director of Food Services at The Ottawa Mission and the owner of his non-profit service "Chef Ric's."
+            We got to learn about his vulnerable childhood and the story behind his organization.
         </h10>
     </div>
 
