--- a/aboutme.html
+++ b/aboutme.html
@@ -33,7 +33,7 @@
 
     <div class="right-again">
         <h10>I am a fourth-year student at Carleton University in Ottawa, Ontario. 
-            Give it one more year, and I'll have a Bachelor's in Media Production and Design. 
+            Give it a few more months, and I'll have a Bachelor's in Media Production and Design. 
             I wish I could give you a straightforward answer to what my program is, but the truth is, it's basically learning every possible way to tell a story. 
             My favourites that we have learned so far are Multimedia Design, Videography, and UX/UI design. 
             I've found that Web development is definitely one of the more challenging ones, so I'm really proud that I managed to code this website completely! 
